# ai_experiments

./: pyproject.toml  requirements.txt
notebooks/: 01_image_loading.ipynb
src/: inference.py  load_image.py  main.py
